--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <button onclick="loadSite()">Embed Link</button>
     </div>
     <div class="error-msg">
-        Note: Some sites (Google, Facebook, etc.) block embedding for security. Ensure your link starts with <b>https://</b>.
+        Note: Some sites (Google, Facebook, etc.) block embedding for security. Ensure your link starts with <b>https://</b>. Also, if you're using this for blockn't purposes, because we both know why this really exists, if the blocked window pops up, just press the embed button again until it does work, it can take a bit but it'll get there!
     </div>
 
     <iframe id="embed-container" src="about:blank"></iframe>
