--- a/index.html
+++ b/index.html
@@ -78,11 +78,23 @@
             border: none;
             background: #fff;
         }
-        .info-bar {
-            font-size: 11px;
-            color: #94a3b8;
-            padding: 5px 15px;
-            background: #fff;
+        .note-area {
+            font-size: 12px;
+            color: #475569;
+            padding: 10px 15px;
+            background: #fefce8;
+            border-bottom: 1px solid #e2e8f0;
+            line-height: 1.4;
+        }
+        .security-badge {
+            display: inline-block;
+            background: #dcfce7;
+            color: #166534;
+            padding: 2px 6px;
+            border-radius: 4px;
+            font-weight: bold;
+            font-size: 10px;
+            margin-right: 5px;
         }
     </style>
 </head>
@@ -92,7 +104,7 @@
         <h2>Embedder</h2>
         <h3>Recent History</h3>
         <div id="history-list"></div>
-        <button onclick="clearHistory()" style="margin-top:auto; background:#ef4444; font-size: 12px;">Clear History</button>
+        <button onclick="clearHistory()" style="margin-top:auto; background:#ef4444; font-size: 12px; color: white; border:none; padding:8px; border-radius:5px; cursor:pointer;">Clear History</button>
     </div>
 
     <div class="main-content">
@@ -100,9 +112,13 @@
             <input type="text" id="urlInput" placeholder="Enter URL (e.g., wikipedia.org)">
             <button onclick="loadSite()">Embed</button>
         </div>
-        <div class="info-bar">
-            Security Active: <b>Sandbox Mode</b> | <b>No-Referrer Policy</b>
+        
+        <div class="note-area">
+            <span class="security-badge">SECURE MODE ACTIVE</span>
+            <b>Note:</b> Some sites (Google, Facebook, etc.) block embedding for security via 'X-Frame-Options'. 
+            If a site doesn't load, it's likely being blocked by the destination server, not your code.
         </div>
+
         <iframe 
             id="embed-viewport" 
             src="about:blank" 
@@ -116,7 +132,6 @@
         const iframe = document.getElementById('embed-viewport');
         const historyList = document.getElementById('history-list');
 
-        // Load history from local storage on startup
         let history = JSON.parse(localStorage.getItem('embedHistory')) || [];
         renderHistory();
 
@@ -124,7 +139,6 @@
             let url = customUrl || urlInput.value.trim();
             if (!url) return;
 
-            // Ensure URL format
             if (!url.startsWith('http://') && !url.startsWith('https://')) {
                 url = 'https://' + url;
             }
@@ -139,7 +153,7 @@
         function saveToHistory(url) {
             if (!history.includes(url)) {
                 history.unshift(url);
-                if (history.length > 10) history.pop(); // Keep last 10
+                if (history.length > 10) history.pop();
                 localStorage.setItem('embedHistory', JSON.stringify(history));
                 renderHistory();
             }
@@ -162,7 +176,6 @@
             renderHistory();
         }
 
-        // Enter key support
         urlInput.addEventListener("keypress", (e) => {
             if (e.key === "Enter") loadSite();
         });
