--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
         
         <div class="note-area">
             <span class="security-badge">SECURE MODE ACTIVE</span>
-            <b>Note:</b> Some sites (Google, Facebook, etc.) block embedding for security via 'X-Frame-Options'. 
-            If a site doesn't load, it's likely being blocked by the destination server, not your code.
+            <b>Note:</b> Some sites, such as Facebook, Google, and YouTube won't work as they block embedding. Also, if you're using this for blockn't purposes, then
+            if the sites show up as blocked, then just try again, it'll probably take a few, especially if it's a .com site. Thanks :)
         </div>
 
         <iframe 
