--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Secure Web Embedder</title>
+    <title>Site Embedder</title>
     <style>
         :root {
             --primary: #2563eb;
@@ -114,8 +114,8 @@
         </div>
         
         <div class="note-area">
-            <span class="security-badge">SECURE MODE ACTIVE</span>
-            <b>Note:</b> Some sites, such as Facebook, Google, and YouTube won't work as they block embedding. Also, if you're using this for blockn't purposes, then
+            <span class="security-badge">NOTE</span>
+            Some sites, such as Facebook, Google, and YouTube won't work as they block embedding. Also, if you're using this for blockn't purposes, then
             if the sites show up as blocked, then just try again, it'll probably take a few, especially if it's a .com site. Thanks :)
         </div>
 
