--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="note-area">
             <span class="security-badge">NOTE</span>
             Some sites, such as Facebook, Google, and YouTube won't work as they block embedding. Also, if you're using this for blockn't purposes, then
-            if the sites show up as blocked, then just try again, it'll probably take a few, especially if it's a .com site. Thanks :)
+            if the sites show up as blocked, then just try again, it'll probably take a few, especially if it's a .com site, also some .com sites just won't blockn't. Thanks :)
         </div>
 
         <iframe 
