--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
         </div>
         
         <div class="note-area">
-            <b>Note:</b> Some sites block embedding via 'X-Frame-Options'. 
-            If it stays blank, the destination site is blocking the connection.
+            <b>Note:</b> Some sites, such as Facebook, Google, and YouTube won't work here as they block embedding, also, if you're using this for "blockn't" purposes, it may
+            tell you that the page is blocked, and some sites may just stay blocked, but usually they de-block in ~10-15 tries, thanks for coming, despite the solid 500
+            sites that are already blockn'ted and accessible.
         </div>
 
         <iframe 
