--- a/index.html
+++ b/index.html
@@ -26,20 +26,17 @@
             flex-direction: column;
             padding: 15px;
             flex-shrink: 0;
-            transition: 0.3s;
         }
         h3 { font-size: 14px; text-transform: uppercase; color: #64748b; margin-top: 20px; }
-        #history-list { list-style: none; padding: 0; overflow-y: auto; }
+        #history-list { list-style: none; padding: 0; overflow-y: auto; flex-grow: 1; }
         .history-item {
             padding: 8px 12px;
             background: #f1f5f9;
             margin-bottom: 5px;
             border-radius: 6px;
-            font-size: 13px;
+            font-size: 11px;
             cursor: pointer;
-            white-space: nowrap;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            word-break: break-all;
         }
         .history-item:hover { background: #e2e8f0; }
 
@@ -53,7 +50,8 @@
             background: #fff;
             border-bottom: 1px solid #e2e8f0;
             display: flex;
-            gap: 10px;
+            gap: 8px;
+            align-items: center;
         }
         input {
             flex-grow: 1;
@@ -63,33 +61,27 @@
             outline: none;
         }
         button {
-            padding: 10px 20px;
+            padding: 10px 15px;
             background: var(--primary);
             color: white;
             border: none;
             border-radius: 8px;
             cursor: pointer;
             font-weight: 600;
+            white-space: nowrap;
         }
-        .btn-secondary {
-            background: #64748b;
-        }
+        .btn-alt { background: #64748b; }
+        .btn-save { background: #10b981; }
+
         #embed-viewport {
             flex-grow: 1;
             border: none;
             background: #fff;
-            width: 100%;
-            height: 100%;
-        }
-        /* Style for when the iframe itself goes fullscreen */
-        #embed-viewport:fullscreen {
-            width: 100vw;
-            height: 100vh;
         }
         .note-area {
-            font-size: 12px;
+            font-size: 11px;
             color: #475569;
-            padding: 10px 15px;
+            padding: 8px 15px;
             background: #fefce8;
             border-bottom: 1px solid #e2e8f0;
         }
@@ -99,22 +91,21 @@
 
     <div id="sidebar">
         <h2>Embedder</h2>
-        <h3>Recent History</h3>
+        <h3>History</h3>
         <div id="history-list"></div>
-        <button onclick="clearHistory()" style="margin-top:auto; background:#ef4444; font-size: 12px; color: white; border:none; padding:8px; border-radius:5px; cursor:pointer;">Clear History</button>
+        <button onclick="clearHistory()" style="background:#ef4444; margin-top:10px;">Clear All</button>
     </div>
 
     <div class="main-content">
         <div class="header">
-            <input type="text" id="urlInput" placeholder="Enter URL (e.g., wikipedia.org)">
-            <button onclick="loadSite()">Embed</button>
-            <button class="btn-secondary" onclick="toggleFullscreen()">Fullscreen</button>
+            <input type="text" id="urlInput" placeholder="Paste link here...">
+            <button onclick="loadSite()">Go</button>
+            <button class="btn-save" onclick="saveCurrentToHistory()" title="Save current link to history">Save Current</button>
+            <button class="btn-alt" onclick="toggleFullscreen()">Fullscreen</button>
         </div>
         
         <div class="note-area">
-            <b>Note:</b> Some sites, such as Facebook, Google, and YouTube won't work here as they block embedding, also, if you're using this for "blockn't" purposes, it may
-            tell you that the page is blocked, and some sites may just stay blocked, but usually they de-block in ~10-15 tries, thanks for coming, despite the solid 500
-            sites that are already blockn'ted and accessible.
+            <b>Note:</b> If you click a link *inside* the window and it doesn't show in the history, click <b>"Save Current"</b> to manually bookmark it. Also, some sites like Google, YouTube, basically all of the big sites won't work here. And if you're using this for blockn't purposes, and it still shows up as blocked, just reembed, it'll work after a bit, but some sites won't. Thanks for coming.
         </div>
 
         <iframe 
@@ -140,27 +131,34 @@
             if (!url.startsWith('http')) url = 'https://' + url;
 
             iframe.src = url;
+            urlInput.value = url; // Keep input in sync
             if (!customUrl) saveToHistory(url);
         }
 
-        // --- NEW FULLSCREEN FUNCTION ---
-        function toggleFullscreen() {
-            if (iframe.requestFullscreen) {
-                iframe.requestFullscreen();
-            } else if (iframe.webkitRequestFullscreen) { /* Safari */
-                iframe.webkitRequestFullscreen();
-            } else if (iframe.msRequestFullscreen) { /* IE11 */
-                iframe.msRequestFullscreen();
+        function saveCurrentToHistory() {
+            // Try to get the URL from the iframe. 
+            // Note: This only works if the site has the same origin or allows it.
+            try {
+                const currentUrl = iframe.contentWindow.location.href;
+                if (currentUrl && currentUrl !== "about:blank") {
+                    saveToHistory(currentUrl);
+                } else {
+                    saveToHistory(urlInput.value);
+                }
+            } catch (e) {
+                // If blocked by security, we save whatever is in the input box
+                saveToHistory(urlInput.value);
             }
         }
 
         function saveToHistory(url) {
-            if (!history.includes(url)) {
-                history.unshift(url);
-                if (history.length > 10) history.pop();
-                localStorage.setItem('embedHistory', JSON.stringify(history));
-                renderHistory();
-            }
+            if (!url || url === "about:blank") return;
+            // Remove existing instance if it's already there to move it to top
+            history = history.filter(item => item !== url);
+            history.unshift(url);
+            if (history.length > 20) history.pop();
+            localStorage.setItem('embedHistory', JSON.stringify(history));
+            renderHistory();
         }
 
         function renderHistory() {
@@ -168,10 +166,15 @@
             history.forEach(url => {
                 const div = document.createElement('div');
                 div.className = 'history-item';
-                div.innerText = url.replace('https://', '').replace('http://', '');
+                div.innerText = url;
                 div.onclick = () => loadSite(url);
                 historyList.appendChild(div);
             });
+        }
+
+        function toggleFullscreen() {
+            if (iframe.requestFullscreen) iframe.requestFullscreen();
+            else if (iframe.webkitRequestFullscreen) iframe.webkitRequestFullscreen();
         }
 
         function clearHistory() {
